--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,11 @@ body {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
-@media (max-width: 767px) {
-    .container {
-        height: 780px;
-    }
-}
+
 @media (min-width:768px) {
     .container {
         width: 750px;
+        height: 445px;
     }
 }
 @media (min-width:992px) {
@@ -137,6 +134,15 @@ body {
         text-align: center;
     }
 }
+.container .stats-container .stat h2 {
+    font-size: 24px;
+    font-weight: bold;
+}
+.container .stats-container .stat p {
+       text-transform: uppercase;
+       font-size: 12px;
+       
+}
 .container img {
     width: 50%;
 }
@@ -144,4 +150,9 @@ body {
     .container img {
         width: 100%;
     }  
+}
+@media (min-width: 768px) {
+    .container img {
+        height: 100%;
+    } 
 }
