--- a/css/style.css
+++ b/css/style.css
@@ -10,149 +10,203 @@
     box-sizing: border-box;
 }
 body {
+    height: 955px;
     background-color: var(--main-background);
-    color: white;
-    font-family: Inter , Tahoma;
-    height: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-@media (max-width: 767px) {
-    body {
-        padding: 20px;
-        height: 955px;
-    }
+    font-family: Inter , Tahoma;
 }
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-wrap: wrap-reverse;
-    background-color: var(--card-background);
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-
-@media (min-width:768px) {
-    .container {
-        width: 750px;
-        height: 445px;
-    }
-}
-@media (min-width:992px) {
-    .container {
-        width: 970px;
-    }
-}
-@media (min-width:1200px) {
-    .container {
-        width: 1170px;
-    }
-}
-.container .text-container {
-    width: 50%;
-    padding: 70px;
+    width: 327px;
+    height: 780px;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
+    background-color: var(--card-background);
+    border-radius:8px;
+    -webkit-border-radius:8px;
+    -moz-border-radius:8px;
+    -ms-border-radius:8px;
+    -o-border-radius:8px;
 }
-@media (max-width: 991px) {
-    .container .text-container {
-        padding: 30px;
-    }
+.container .img-mobile {
+    width: 100%;
+    height: 240px;
 }
-@media (max-width: 767px) {
-    .container .text-container {
-        width: 100%;
-        padding: 0;
-    }  
+.container .text-container {
+    flex: 1;
+    padding: 40px 30px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    position: relative;
 }
 .container .text-container h1 {
-    font-size: 36px;
+    height: 100px;
+    position: absolute;
+    top: 40px;
+    left: 30px;
+    right: 30px;
+    font-size: 28px;
+    text-align: center;
+    color: hsl(0, 0%, 100%);
     font-weight: bold;
-    margin-top: 20px;
-    line-height: 44px;
-}
-@media (max-width: 767px) {
-    .container .text-container h1 {
-        font-size: 28px;
-        line-height: 32px;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 30px;
-        margin-bottom: 30px;
-}  
+    line-height: 32px;
 }
 .container .text-container h1 span {
     color: var(--soft-violet);
 }
+.container .text-container h1 .grow {
+    display: none;
+}
 .container .text-container p {
-    color: hsla(0, 0%, 100%, 0.75);
-    font-size: 15px;
+    position: absolute;
+    top: 150px;
+    left: 30px;
+    right: 30px;
+    height: 95px;
+    font-size: 14px;
+    font-family: Inter , Tahoma;
     line-height: 25px;
-    max-width: 400px;
+    text-align: center;
+    color: hsla(0, 0%, 100%, 0.75);
 }
-@media (max-width: 767px) {
-    .container .text-container p {
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-        padding-left: 15px;
-        padding-right: 15px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-}
-.container .stats-container {
+.container .text-container .stats-container {
+    position: absolute;
+    top: calc(150px + 80px);
+    left: 30px;
+    right: 30px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 400px;
+    flex-direction: column;
+    flex: 1;
+    padding-top: 45px;
 }
-@media (max-width: 767px) {
-    .container .stats-container {
-        width: 265px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 30px;
+.container .text-container .stats-container .stat {
+    text-align: center;
+    margin-bottom: 45px;
+}
+.container .text-container .stats-container .stat:last-of-type {
+    margin-bottom: 0;
+}
+.container .text-container .stats-container .stat h2 {
+   font-size: 24px;
+   font-weight: bold;
+   color: white;
+   text-transform: uppercase;
+}
+.container .text-container .stats-container .stat span {
+    font-size: 12px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color:hsla(0, 0%, 100%, 0.6);
+}
+.container .image-desktop {
+    display: none;
+}
+@media (min-width: 468px) {
+    .container {
+        width: calc(100% - 40px);
+        flex-direction: column-reverse;
     }
-}
-@media (max-width: 767px) {
-    .container .stats-container .stat {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-bottom: 30px;
+    .container .img-mobile {
+        display: none;
     }
-    .container .stats-container .stat h2 , .container .stats-container .stat p {
+    .container .image-desktop {
+        display: block;
         width: 100%;
-        text-align: center;
+        height: 240px;
     }
-}
-.container .stats-container .stat h2 {
-    font-size: 24px;
-    font-weight: bold;
-}
-.container .stats-container .stat p {
-       text-transform: uppercase;
-       font-size: 12px;
-       
-}
-.container img {
-    width: 50%;
-}
-@media (max-width: 767px) {
-    .container img {
+    .container .image-desktop img {
+        height: 100%;
         width: 100%;
-    }  
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
+}
+
 }
 @media (min-width: 768px) {
-    .container img {
+    .container {
+        height: 445px;
+        flex-direction: row;
+    }
+    .container .text-container {
+        width: 50%;
+        padding: 10px;
+        justify-content: center;
+    }
+    .container .text-container h1 , .container .text-container p {
+        text-align: left;
+        width: 327px;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+    }
+    .container .text-container h1 .grow {
+        display: inline;
+        color:hsl(0, 0%, 100%);
+    }
+    .container .text-container p {
+        top: 160px;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+}
+    .container .image-desktop {
+        width: 50%;
         height: 100%;
-    } 
+    }
+    .container .image-desktop img {
+        width: 100%;
+        height: 100%;
+    }
+    .container .text-container .stats-container {
+        justify-content: space-between;
+        flex-direction: row;
+        top: auto;
+        bottom: 40px;
+        width: 327px;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+        right: auto;
+}
+    
+}
+@media (min-width: 1440px) {
+    .container {
+        width: 1110px;
+    }
+    .container .text-container {
+        position: relative;
+        flex: 1;
+        padding: 70px 125px 70px 70px;
+    }
+    .container .text-container h1 , .container .text-container p , .container .text-container .stats-container {
+        width: 375px;
+        font-weight: lighter;
+    }
+    .container .text-container h1 {
+        font-size: 35px;
+        line-height: 44px;
+        height: 90px;
+    }
+    .container .image-desktop {
+        width: 540px;
+    }
 }
